--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       </ul>
       <button class="hire">Hire Me</button>
     </div>
+    <i id="menu-bar" class="fa-solid fa-bars" onclick="show()"></i>
   </nav>
   <!-- nav end -->
   <!-- header start -->
@@ -41,7 +42,7 @@
           experiences. With a keen eye for design and a knack for codingI specialize in bringing ideas to life through
           captivating
           websites</p>
-        <button class="hire">Hire Me</button>
+        <button id="hbtn" class="hire">Hire Me</button>
       </div>
 
     </article>
@@ -147,7 +148,7 @@
             me your email.
             Thank you.</p>
           <div class="mail">
-            <input type="email"> <button class="send">Send</button>
+            <input type="email" placeholder="Enter your email"> <button class="send">Send</button>
           </div>
         </div>
       </div>
@@ -161,6 +162,8 @@
       <small>&copy;copyright 2023 | This website make by Foisal-Programer!</small>
     </div>
   </footer>
+
+  <script src="hello.js"></script>
 </body>
 
 </html>
