change some css

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
           <p>It is my first created website in my life. When I develop this website then I was very excited. I am
             created this . Pease click to visit this site</p>
-          <button id="p-1">Project-1</button>
+          <a href="https://foisal143.github.io/Ecomarce-site/" id="p-1" target="_blank">project 1</a>
         </div>
         <div class="project">
           <small>02</small>
@@ -124,15 +124,15 @@
 
           <p>It is my first created Game in my life. When I develop this Game then I was very excited. I am
             created this . Pease click to visit this Game</p>
-          <button id="p-1">Project-2</button>
+          <a href="https://foisal143.github.io/Dino-Game/" id="p-1" target="_blank">project 2</a>
         </div>
         <div class="project">
           <small>03</small>
-          <h3>This is a portfolio</h3>
+          <h3>This is a Porfolio</h3>
 
           <p>It is my sceond time created website in my life. When I develop this website then I was very excited. I am
             created this . Pease click to visit this site</p>
-          <button id="p-1">Project-3</button>
+          <a href="https://foisal143.github.io/Philip-portfolo/" id="p-1" target="_blank">project 3</a>
         </div>
       </div>
     </section>
@@ -148,7 +148,7 @@
             me your email.
             Thank you.</p>
           <div class="mail">
-            <input type="email" placeholder="Enter your email"> <button class="send">Send</button>
+            <input type="email" placeholder="Enter your emai"><button class="send">Send</button>
           </div>
         </div>
       </div>
