--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     </div>
     <div class="nav-menu">
       <ul>
-        <li><a href="#">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="#">About</a></li>
-        <li><a href="#">Contuct</a></li>
+        <li><a href="contuct.html">Contuct</a></li>
       </ul>
       <button class="hire">Hire Me</button>
     </div>
@@ -33,7 +33,7 @@
   <header>
     <article class="intro-conteiner">
       <div class="text">
-        <h1>Hi I am Foisal</h1>
+        <h1>Hi <span>I</span> am F<span>o</span>is<span>a</span>l</h1>
         <div class="typing-text">
           I am a <span></span>
         </div>
